--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -189,13 +189,13 @@ Returns [`Camera`](/api/camera)
 
 ### bool IsContainerEnabledAndVisible(UIItem uiItem) {#bool-IsContainerEnabledAndVisible-UIItem-uiItem}
 
-### ConnectionInfo GetConnectionInfo() {#ConnectionInfo-GetConnectionInfo}
+### table GetConnectionInfo() {#table-GetConnectionInfo}
 
-### NetworkStat GetNetworkStat() {#NetworkStat-GetNetworkStat}
+### table GetNetworkStat() {#table-GetNetworkStat}
 
 ### void Log(string) {#void-Log-string}
 
-### AmStreamingStats GetVoxelStreamStats() {#AmStreamingStats-GetVoxelStreamStats}
+### table GetVoxelStreamStats() {#table-GetVoxelStreamStats}
 
 ### bool IsClient() {#bool-IsClient}
 
@@ -211,6 +211,8 @@ Returns [`Camera`](/api/camera)
 
 ### int GetCurrentUIActionID() {#int-GetCurrentUIActionID}
 
+### void WriteToScreen(string, Vec2, Vec2, Vec4, int, float) {#void-WriteToScreen-string-Vec2-Vec2-Vec4-int-float}
+
 ### void WriteToScreen(string, Vec2) {#void-WriteToScreen-string-Vec2}
 
 ### void WriteToScreen(string, Vec2, Vec2) {#void-WriteToScreen-string-Vec2-Vec2}
@@ -218,8 +220,6 @@ Returns [`Camera`](/api/camera)
 ### void WriteToScreen(string, Vec2, Vec2, Vec4) {#void-WriteToScreen-string-Vec2-Vec2-Vec4}
 
 ### void WriteToScreen(string, Vec2, Vec2, Vec4, int) {#void-WriteToScreen-string-Vec2-Vec2-Vec4-int}
-
-### void WriteToScreen(string, Vec2, Vec2, Vec4, int, float) {#void-WriteToScreen-string-Vec2-Vec2-Vec4-int-float}
 
 ### void CloseApp() {#void-CloseApp}
 
