--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -23,13 +23,13 @@ This class is only available on server
 
 ### userdata GetVoxelClientIDs() {#userdata-GetVoxelClientIDs}
 
-### AmStreamingStats GetVoxelStreamStats(int clientID) {#AmStreamingStats-GetVoxelStreamStats-int-clientID}
+### table GetVoxelStreamStats(int clientID) {#table-GetVoxelStreamStats-int-clientID}
 
-### ServerConnectionInfo GetServerConnectionInfo() {#ServerConnectionInfo-GetServerConnectionInfo}
+### table GetServerConnectionInfo() {#table-GetServerConnectionInfo}
 
-### userdata GetConnectionInfos() {#userdata-GetConnectionInfos}
+### table GetConnectionInfos() {#table-GetConnectionInfos}
 
-### NetworkStat GetNetworkStat() {#NetworkStat-GetNetworkStat}
+### table GetNetworkStat() {#table-GetNetworkStat}
 
 ### userdata GetNetworkStats() {#userdata-GetNetworkStats}
 
