--- a/docs/90-api/assetManager.mdx
+++ b/docs/90-api/assetManager.mdx
@@ -19,7 +19,7 @@ id: AssetManager
 
 ### bool IsAssetType(type) {#bool-IsAssetType-type}
 
-### userdata GetAssetTypes() {#userdata-GetAssetTypes}
+### table GetAssetTypes(AssetManager) {#table-GetAssetTypes-AssetManager}
 
 ### string GetAssetsPath(AssetManager) {#string-GetAssetsPath-AssetManager}
 
