--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -96,13 +96,9 @@ end
 
 ### bool IsWindowOpen(string windowID) {#bool-IsWindowOpen-string-windowID}
 
-### void OpenScriptFile(string filename, int line) {#void-OpenScriptFile-string-filename-int-line}
+### void OpenScriptFile(string) {#void-OpenScriptFile-string}
 
-### void OpenServerScriptFile(string filename, int line) {#void-OpenServerScriptFile-string-filename-int-line}
-
-### void OpenZeroBraneStudio(string parameters) {#void-OpenZeroBraneStudio-string-parameters}
-
-### void OpenZeroBraneStudioActions() {#void-OpenZeroBraneStudioActions}
+### void OpenScriptFile(string, int) {#void-OpenScriptFile-string-int}
 
 ### void SetUIScale(float scale) {#void-SetUIScale-float-scale}
 
