--- a/docs/90-api/object3D.mdx
+++ b/docs/90-api/object3D.mdx
@@ -25,7 +25,7 @@ id: Object3D
 
 ### Vec3 GetUp(Object3D) {#Vec3-GetUp-Object3D}
 
-### Matrix4f GetLtw(Object3D) {#Matrix4f-GetLtw-Object3D}
+### Mat4 GetLtw(Object3D) {#Mat4-GetLtw-Object3D}
 
 ### Vec3 GetPosition(Object3D) {#Vec3-GetPosition-Object3D}
 
