--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -45,3 +45,9 @@ This class is only available on server
 
 ### CommandLine GetCommandLine() {#CommandLine-GetCommandLine}
 
+### AssetManager GetResourceManScene() {#AssetManager-GetResourceManScene}
+
+### AssetManager GetResourceManUI() {#AssetManager-GetResourceManUI}
+
+### AssetManager GetResourceManSettings() {#AssetManager-GetResourceManSettings}
+
