--- a/docs/90-api/camera.mdx
+++ b/docs/90-api/camera.mdx
@@ -25,7 +25,7 @@ id: Camera
 
 ### Vec3 GetUp(Object3D) {#Vec3-GetUp-Object3D}
 
-### Matrix4f GetLtw(Object3D) {#Matrix4f-GetLtw-Object3D}
+### Mat4 GetLtw(Object3D) {#Mat4-GetLtw-Object3D}
 
 ### Vec3 GetPosition(Object3D) {#Vec3-GetPosition-Object3D}
 
@@ -49,7 +49,7 @@ id: Camera
 
 ### Vec3 GetUp() {#Vec3-GetUp}
 
-### Matrix4f GetLtw() {#Matrix4f-GetLtw}
+### Mat4 GetLtw() {#Mat4-GetLtw}
 
 ### Vec3 GetPosition() {#Vec3-GetPosition}
 
@@ -59,7 +59,7 @@ id: Camera
 
 ### void SetFrustum(Frustum) {#void-SetFrustum-Frustum}
 
-### Matrix4f GetProjection() {#Matrix4f-GetProjection}
+### Mat4 GetProjection() {#Mat4-GetProjection}
 
 ### Vec3 GetRay(Vec2) {#Vec3-GetRay-Vec2}
 
