--- a/docs/90-api/vec2.mdx
+++ b/docs/90-api/vec2.mdx
@@ -9,9 +9,9 @@ id: Vec2
 
 ### Vec2() {#Vec2}
 
-### Vec2(float, float) {#Vec2-float-float}
-
 ### Vec2(float) {#Vec2-float}
+
+### Vec2(float, float) {#Vec2-float-float}
 
 ### Vec2(Vec2) {#Vec2-Vec2}
 
@@ -22,6 +22,22 @@ id: Vec2
 ### float __index(Vec2, int) {#float-index-Vec2-int}
 
 ### void __newindex(Vec2, int, float) {#void-newindex-Vec2-int-float}
+
+### Vec2 __add(Vec2, Vec2) {#Vec2-add-Vec2-Vec2}
+
+### Vec2 __add(Vec2, Vec2i) {#Vec2-add-Vec2-Vec2i}
+
+### Vec2 __add(Vec2, float) {#Vec2-add-Vec2-float}
+
+### Vec2 __add(float, Vec2) {#Vec2-add-float-Vec2}
+
+### Vec2 __sub(Vec2, Vec2) {#Vec2-sub-Vec2-Vec2}
+
+### Vec2 __sub(Vec2, Vec2i) {#Vec2-sub-Vec2-Vec2i}
+
+### Vec2 __sub(Vec2, float) {#Vec2-sub-Vec2-float}
+
+### Vec2 __sub(float, Vec2) {#Vec2-sub-float-Vec2}
 
 ### Vec2 __mul(Vec2, Vec2) {#Vec2-mul-Vec2-Vec2}
 
@@ -37,97 +53,31 @@ id: Vec2
 
 ### Vec2 __div(Vec2, float) {#Vec2-div-Vec2-float}
 
-### Vec2 __add(Vec2, Vec2) {#Vec2-add-Vec2-Vec2}
+### Vec2 __div(float, Vec2) {#Vec2-div-float-Vec2}
 
-### Vec2 __add(Vec2, Vec2i) {#Vec2-add-Vec2-Vec2i}
-
-### Vec2 __sub(Vec2, Vec2) {#Vec2-sub-Vec2-Vec2}
-
-### Vec2 __sub(Vec2, Vec2i) {#Vec2-sub-Vec2-Vec2i}
-
-### Vec2 __unm(Vec2, Vec2) {#Vec2-unm-Vec2-Vec2}
+### Vec2 __unm(Vec2) {#Vec2-unm-Vec2}
 
 ### bool __eq(Vec2, Vec2) {#bool-eq-Vec2-Vec2}
 
 ### bool __eq(Vec2, Vec2i) {#bool-eq-Vec2-Vec2i}
 
-### float __len(Vec2, Vec2) {#float-len-Vec2-Vec2}
+### float __len(Vec2) {#float-len-Vec2}
 
 ## List of Methods
 
-### float Sum() {#float-Sum}
-
-### float Sub() {#float-Sub}
-
-### float Diff() {#float-Diff}
-
-### float Prod() {#float-Prod}
-
-### float LinLen() {#float-LinLen}
-
 ### float Len() {#float-Len}
-
-### float SqLen() {#float-SqLen}
-
-### float MaxComponent() {#float-MaxComponent}
-
-### float MinComponent() {#float-MinComponent}
-
-### float GetMax() {#float-GetMax}
-
-### float GetMin() {#float-GetMin}
-
-### bool IsWithin(float) {#bool-IsWithin-float}
-
-### bool IsIn(float) {#bool-IsIn-float}
-
-### void Insert(float) {#void-Insert-float}
-
-### Vec2 GetAbs() {#Vec2-GetAbs}
-
-### float GetAvg() {#float-GetAvg}
-
-### Vec2 XY() {#Vec2-XY}
-
-### Vec2 YX() {#Vec2-YX}
-
-### bool IsAnyNaN() {#bool-IsAnyNaN}
-
-### Vec2 GetUnit() {#Vec2-GetUnit}
-
-### Vec2 GetUnitSafe() {#Vec2-GetUnitSafe}
-
-### Vec2 SetAbs() {#Vec2-SetAbs}
-
-### float Dot(Vec2, Vec2) {#float-Dot-Vec2-Vec2}
-
-### float Dot(Vec2, Vec2i) {#float-Dot-Vec2-Vec2i}
-
-### Vec3 Cross(Vec2, Vec2) {#Vec3-Cross-Vec2-Vec2}
-
-### Vec3 Cross(Vec2, Vec2i) {#Vec3-Cross-Vec2-Vec2i}
-
-### Vec2 Lerp(Vec2, Vec2, float) {#Vec2-Lerp-Vec2-Vec2-float}
-
-### Vec2 Mix(Vec2, Vec2, float) {#Vec2-Mix-Vec2-Vec2-float}
-
-### bool IsZero(Vec2) {#bool-IsZero-Vec2}
-
-### float Length() {#float-Length}
 
 ### float SqrLength() {#float-SqrLength}
 
-### Angle GetAngle() {#Angle-GetAngle}
+### bool IsZero() {#bool-IsZero}
 
-### float GetAngleRad() {#float-GetAngleRad}
+### float GetMinComponent() {#float-GetMinComponent}
 
-### void Normalize() {#void-Normalize}
+### float GetMaxComponent() {#float-GetMaxComponent}
 
-### void NormalizeTo(float) {#void-NormalizeTo-float}
+### bool IsWithin(float) {#bool-IsWithin-float}
 
-### Vec2 GetNormalized() {#Vec2-GetNormalized}
-
-### Vec2 GetNormalizedTo(float) {#Vec2-GetNormalizedTo-float}
+### Vec2 GetAbs() {#Vec2-GetAbs}
 
 ### void Clamp(Vec2, float, float) {#void-Clamp-Vec2-float-float}
 
@@ -136,6 +86,22 @@ id: Vec2
 ### Vec2 GetClamped(Vec2, float, float) {#Vec2-GetClamped-Vec2-float-float}
 
 ### Vec2 GetClamped(Vec2, Vec2, Vec2) {#Vec2-GetClamped-Vec2-Vec2-Vec2}
+
+### float Dot(Vec2, Vec2) {#float-Dot-Vec2-Vec2}
+
+### float Dot(Vec2, Vec2i) {#float-Dot-Vec2-Vec2i}
+
+### bool IsAnyNaN() {#bool-IsAnyNaN}
+
+### Vec2 Lerp(Vec2, Vec2, float) {#Vec2-Lerp-Vec2-Vec2-float}
+
+### Vec2 Normalize() {#Vec2-Normalize}
+
+### Vec2 NormalizeSafe() {#Vec2-NormalizeSafe}
+
+### Vec2 GetNormalized() {#Vec2-GetNormalized}
+
+### Vec2 GetNormalizedSafe() {#Vec2-GetNormalizedSafe}
 
 ### void Ceil(Vec2) {#void-Ceil-Vec2}
 
@@ -149,39 +115,11 @@ id: Vec2
 
 ### Vec2 GetRounded(Vec2) {#Vec2-GetRounded-Vec2}
 
-### void SetLength(Vec2, float) {#void-SetLength-Vec2-float}
+### float DistanceTo(Vec2) {#float-DistanceTo-Vec2}
 
-### float DistanceTo(Vec2, Vec2) {#float-DistanceTo-Vec2-Vec2}
+### Angle GetAngle() {#Angle-GetAngle}
 
-### void MorphTo(Vec2, float) {#void-MorphTo-Vec2-float}
-
-### Vec2 GetMorphedTo(Vec2, float) {#Vec2-GetMorphedTo-Vec2-float}
-
-### void RotateRight90() {#void-RotateRight90}
-
-### void RotateRight(float) {#void-RotateRight-float}
-
-### void RotateRight(Angle) {#void-RotateRight-Angle}
-
-### Vec2 GetRotatedRight(float) {#Vec2-GetRotatedRight-float}
-
-### Vec2 GetRotatedRight(Angle) {#Vec2-GetRotatedRight-Angle}
-
-### Vec2 GetRotatedRight90() {#Vec2-GetRotatedRight90}
-
-### void RotateLeft90() {#void-RotateLeft90}
-
-### void RotateLeft(float) {#void-RotateLeft-float}
-
-### void RotateLeft(Angle) {#void-RotateLeft-Angle}
-
-### Vec2 GetRotatedLeft(float) {#Vec2-GetRotatedLeft-float}
-
-### Vec2 GetRotatedLeft(Angle) {#Vec2-GetRotatedLeft-Angle}
-
-### Vec2 GetRotatedLeft90() {#Vec2-GetRotatedLeft90}
-
-### void Rotate90() {#void-Rotate90}
+### float GetAngleRad() {#float-GetAngleRad}
 
 ### void Rotate(float) {#void-Rotate-float}
 
@@ -191,17 +129,11 @@ id: Vec2
 
 ### Vec2 GetRotated(Angle) {#Vec2-GetRotated-Angle}
 
-### Vec2 GetRotated90() {#Vec2-GetRotated90}
-
 ## List of Properties
 
 ### float x {#float-x}
 
 ### float y {#float-y}
 
-### float length {#float-length}
-
 ### Vec2 zero {#Vec2-zero}
-
-### Vec2 normalized {#Vec2-normalized}
 
