--- a/docs/90-api/vec3i.mdx
+++ b/docs/90-api/vec3i.mdx
@@ -9,19 +9,37 @@ id: Vec3i
 
 ### Vec3i() {#Vec3i}
 
-### Vec3i(int, int, int) {#Vec3i-int-int-int}
-
-### Vec3i(Vec3) {#Vec3i-Vec3}
-
 ### Vec3i(int) {#Vec3i-int}
 
+### Vec3i(int, int, int) {#Vec3i-int-int-int}
+
+### Vec3i(Vec2i, int) {#Vec3i-Vec2i-int}
+
 ### Vec3i(Vec3i) {#Vec3i-Vec3i}
+
+### Vec3i(Vec3) {#Vec3i-Vec3}
 
 ## List of Metamethods
 
 ### int __index(Vec3i, int) {#int-index-Vec3i-int}
 
 ### void __newindex(Vec3i, int, int) {#void-newindex-Vec3i-int-int}
+
+### Vec3i __add(Vec3i, Vec3i) {#Vec3i-add-Vec3i-Vec3i}
+
+### Vec3 __add(Vec3i, Vec3) {#Vec3-add-Vec3i-Vec3}
+
+### Vec3i __add(Vec3i, int) {#Vec3i-add-Vec3i-int}
+
+### Vec3i __add(int, Vec3i) {#Vec3i-add-int-Vec3i}
+
+### Vec3i __sub(Vec3i, Vec3i) {#Vec3i-sub-Vec3i-Vec3i}
+
+### Vec3 __sub(Vec3i, Vec3) {#Vec3-sub-Vec3i-Vec3}
+
+### Vec3i __sub(Vec3i, int) {#Vec3i-sub-Vec3i-int}
+
+### Vec3i __sub(int, Vec3i) {#Vec3i-sub-int-Vec3i}
 
 ### Vec3i __mul(Vec3i, Vec3i) {#Vec3i-mul-Vec3i-Vec3i}
 
@@ -37,149 +55,31 @@ id: Vec3i
 
 ### Vec3i __div(Vec3i, int) {#Vec3i-div-Vec3i-int}
 
-### Vec3i __add(Vec3i, Vec3i) {#Vec3i-add-Vec3i-Vec3i}
+### Vec3i __div(int, Vec3i) {#Vec3i-div-int-Vec3i}
 
-### Vec3 __add(Vec3i, Vec3) {#Vec3-add-Vec3i-Vec3}
-
-### Vec3i __sub(Vec3i, Vec3i) {#Vec3i-sub-Vec3i-Vec3i}
-
-### Vec3 __sub(Vec3i, Vec3) {#Vec3-sub-Vec3i-Vec3}
-
-### Vec3i __unm(Vec3i, Vec3i) {#Vec3i-unm-Vec3i-Vec3i}
+### Vec3i __unm(Vec3i) {#Vec3i-unm-Vec3i}
 
 ### bool __eq(Vec3i, Vec3i) {#bool-eq-Vec3i-Vec3i}
 
 ### bool __eq(Vec3i, Vec3) {#bool-eq-Vec3i-Vec3}
 
-### float __len() {#float-len}
-
-### Vec3i __mod(Vec3i, Vec3i) {#Vec3i-mod-Vec3i-Vec3i}
-
-### Vec3i __mod(Vec3i, int) {#Vec3i-mod-Vec3i-int}
-
-### Vec3i __band(Vec3i, Vec3i) {#Vec3i-band-Vec3i-Vec3i}
-
-### Vec3i __band(Vec3i, int) {#Vec3i-band-Vec3i-int}
-
-### Vec3i __bor(Vec3i, Vec3i) {#Vec3i-bor-Vec3i-Vec3i}
-
-### Vec3i __bor(Vec3i, int) {#Vec3i-bor-Vec3i-int}
-
-### Vec3i __bxor(Vec3i, Vec3i) {#Vec3i-bxor-Vec3i-Vec3i}
-
-### Vec3i __bxor(Vec3i, int) {#Vec3i-bxor-Vec3i-int}
-
-### Vec3i __bnot(Vec3i, Vec3i) {#Vec3i-bnot-Vec3i-Vec3i}
-
-### Vec3i __shl(Vec3i, Vec3i) {#Vec3i-shl-Vec3i-Vec3i}
-
-### Vec3i __shl(Vec3i, int) {#Vec3i-shl-Vec3i-int}
-
-### Vec3i __shr(Vec3i, Vec3i) {#Vec3i-shr-Vec3i-Vec3i}
-
-### Vec3i __shr(Vec3i, int) {#Vec3i-shr-Vec3i-int}
+### int __len(Vec3i) {#int-len-Vec3i}
 
 ## List of Methods
 
-### int Sum() {#int-Sum}
+### int Len() {#int-Len}
 
-### float Prod() {#float-Prod}
+### int SqrLength() {#int-SqrLength}
 
-### Vec3 GetPow(Vec3i, float) {#Vec3-GetPow-Vec3i-float}
+### bool IsZero() {#bool-IsZero}
 
-### int LinLen() {#int-LinLen}
+### int GetMinComponent() {#int-GetMinComponent}
 
-### float Len() {#float-Len}
+### int GetMaxComponent() {#int-GetMaxComponent}
 
-### float SqLen() {#float-SqLen}
-
-### int MaxComponent() {#int-MaxComponent}
-
-### int MinComponent() {#int-MinComponent}
-
-### int GetMax() {#int-GetMax}
-
-### int GetMin() {#int-GetMin}
-
-### float GetMid(Vec3i) {#float-GetMid-Vec3i}
-
-### int MidComponent() {#int-MidComponent}
-
-### bool IsIn(int) {#bool-IsIn-int}
-
-### int GetCompIdx(int) {#int-GetCompIdx-int}
-
-### int GetCompIdxSafe(int) {#int-GetCompIdxSafe-int}
-
-### int GetMinIndex() {#int-GetMinIndex}
-
-### int GetMidIndex() {#int-GetMidIndex}
-
-### int GetMaxIndex() {#int-GetMaxIndex}
-
-### Vec3i GetGreaterSigned(int) {#Vec3i-GetGreaterSigned-int}
+### int GetMidComponent() {#int-GetMidComponent}
 
 ### Vec3i GetAbs() {#Vec3i-GetAbs}
-
-### float GetAvg(Vec3i) {#float-GetAvg-Vec3i}
-
-### Vec2i V2(Vec3i) {#Vec2i-V2-Vec3i}
-
-### Vec2i XY() {#Vec2i-XY}
-
-### Vec2i XZ() {#Vec2i-XZ}
-
-### Vec2i YX() {#Vec2i-YX}
-
-### Vec2i YZ() {#Vec2i-YZ}
-
-### Vec2i ZX() {#Vec2i-ZX}
-
-### Vec2i ZY() {#Vec2i-ZY}
-
-### Vec3i X0Z() {#Vec3i-X0Z}
-
-### Vec3i XZY() {#Vec3i-XZY}
-
-### Vec2i UV(int, int) {#Vec2i-UV-int-int}
-
-### Vec3i UVW(int, int, int) {#Vec3i-UVW-int-int-int}
-
-### int GetOr() {#int-GetOr}
-
-### int GetXor() {#int-GetXor}
-
-### int GetAnd() {#int-GetAnd}
-
-### int GetMul() {#int-GetMul}
-
-### Vec3i GetUnit() {#Vec3i-GetUnit}
-
-### Vec3i GetUnitSafe() {#Vec3i-GetUnitSafe}
-
-### Vec3i SetAbs() {#Vec3i-SetAbs}
-
-### int Dot(Vec3i, Vec3i) {#int-Dot-Vec3i-Vec3i}
-
-### float Dot(Vec3i, Vec3) {#float-Dot-Vec3i-Vec3}
-
-### Vec3i Cross(Vec3i, Vec3i) {#Vec3i-Cross-Vec3i-Vec3i}
-
-### Vec3 Cross(Vec3i, Vec3) {#Vec3-Cross-Vec3i-Vec3}
-
-### Vec3 Lerp(Vec3i, Vec3i, int) {#Vec3-Lerp-Vec3i-Vec3i-int}
-
-### Vec3 Mix(Vec3i, Vec3i, int) {#Vec3-Mix-Vec3i-Vec3i-int}
-
-### bool IsZero(Vec3i) {#bool-IsZero-Vec3i}
-
-### float Length() {#float-Length}
-
-### float SqrLength() {#float-SqrLength}
-
-### Vec3 GetNormalized(Vec3i) {#Vec3-GetNormalized-Vec3i}
-
-### Vec3 GetNormalizedSafe(Vec3i) {#Vec3-GetNormalizedSafe-Vec3i}
 
 ### void Clamp(Vec3i, int, int) {#void-Clamp-Vec3i-int-int}
 
@@ -189,31 +89,41 @@ id: Vec3i
 
 ### Vec3i GetClamped(Vec3i, Vec3i, Vec3i) {#Vec3i-GetClamped-Vec3i-Vec3i-Vec3i}
 
-### Vec3i ClampRadius(float) {#Vec3i-ClampRadius-float}
+### int Dot(Vec3i, Vec3i) {#int-Dot-Vec3i-Vec3i}
 
-### Vec3i Nonzero() {#Vec3i-Nonzero}
+### float Dot(Vec3i, Vec3) {#float-Dot-Vec3i-Vec3}
 
-### Vec3i Signs() {#Vec3i-Signs}
+### Vec3i __mod(Vec3i, Vec3i) {#Vec3i-mod-Vec3i-Vec3i}
 
-### Vec3i SignsUnits() {#Vec3i-SignsUnits}
+### Vec3i __mod(Vec3i, int) {#Vec3i-mod-Vec3i-int}
 
-### void Ceil(Vec3i) {#void-Ceil-Vec3i}
+### Vec3i __band(Vec3i, Vec3i) {#Vec3i-band-Vec3i-Vec3i}
 
-### Vec3i GetCeiled(Vec3i) {#Vec3i-GetCeiled-Vec3i}
+### Vec3i __band(int, Vec3i) {#Vec3i-band-int-Vec3i}
 
-### void Floor(Vec3i) {#void-Floor-Vec3i}
+### Vec3i __band(Vec3i, int) {#Vec3i-band-Vec3i-int}
 
-### Vec3i GetFloored(Vec3i) {#Vec3i-GetFloored-Vec3i}
+### Vec3i __bor(Vec3i, Vec3i) {#Vec3i-bor-Vec3i-Vec3i}
 
-### void Round(Vec3i) {#void-Round-Vec3i}
+### Vec3i __bor(int, Vec3i) {#Vec3i-bor-int-Vec3i}
 
-### Vec3i GetRounded(Vec3i) {#Vec3i-GetRounded-Vec3i}
+### Vec3i __bor(Vec3i, int) {#Vec3i-bor-Vec3i-int}
 
-### float DistanceTo(Vec3i, Vec3i) {#float-DistanceTo-Vec3i-Vec3i}
+### Vec3i __bxor(Vec3i, Vec3i) {#Vec3i-bxor-Vec3i-Vec3i}
 
-### float Length(Vec3i) {#float-Length-Vec3i}
+### Vec3i __bxor(int, Vec3i) {#Vec3i-bxor-int-Vec3i}
 
-### float Length(Vec3i, Vec3i) {#float-Length-Vec3i-Vec3i}
+### Vec3i __bxor(Vec3i, int) {#Vec3i-bxor-Vec3i-int}
+
+### Vec3i __bnot(Vec3i) {#Vec3i-bnot-Vec3i}
+
+### Vec3i __shl(Vec3i, Vec3i) {#Vec3i-shl-Vec3i-Vec3i}
+
+### Vec3i __shl(Vec3i, int) {#Vec3i-shl-Vec3i-int}
+
+### Vec3i __shr(Vec3i, Vec3i) {#Vec3i-shr-Vec3i-Vec3i}
+
+### Vec3i __shr(Vec3i, int) {#Vec3i-shr-Vec3i-int}
 
 ## List of Properties
 
@@ -222,10 +132,6 @@ id: Vec3i
 ### int y {#int-y}
 
 ### int z {#int-z}
-
-### float length {#float-length}
-
-### Vec3 normalized {#Vec3-normalized}
 
 ### Vec3i zero {#Vec3i-zero}
 
