--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -9,17 +9,17 @@ id: Vec4
 
 ### Vec4() {#Vec4}
 
-### Vec4(float, float, float, float) {#Vec4-float-float-float-float}
-
-### Vec4(int, int, int, int) {#Vec4-int-int-int-int}
-
 ### Vec4(float) {#Vec4-float}
 
-### Vec4(Vec4) {#Vec4-Vec4}
+### Vec4(float, float, float, float) {#Vec4-float-float-float-float}
 
 ### Vec4(Vec2, float, float) {#Vec4-Vec2-float-float}
 
 ### Vec4(Vec3, float) {#Vec4-Vec3-float}
+
+### Vec4(Vec4) {#Vec4-Vec4}
+
+### Vec4(Vec4i) {#Vec4-Vec4i}
 
 ## List of Metamethods
 
@@ -27,11 +27,25 @@ id: Vec4
 
 ### void __newindex(Vec4, int, float) {#void-newindex-Vec4-int-float}
 
+### Vec4 __add(Vec4, Vec4) {#Vec4-add-Vec4-Vec4}
+
+### Vec4 __add(Vec4, Vec4i) {#Vec4-add-Vec4-Vec4i}
+
+### Vec4 __add(Vec4, float) {#Vec4-add-Vec4-float}
+
+### Vec4 __add(float, Vec4) {#Vec4-add-float-Vec4}
+
+### Vec4 __sub(Vec4, Vec4) {#Vec4-sub-Vec4-Vec4}
+
+### Vec4 __sub(Vec4, Vec4i) {#Vec4-sub-Vec4-Vec4i}
+
+### Vec4 __sub(Vec4, float) {#Vec4-sub-Vec4-float}
+
+### Vec4 __sub(float, Vec4) {#Vec4-sub-float-Vec4}
+
 ### Vec4 __mul(Vec4, Vec4) {#Vec4-mul-Vec4-Vec4}
 
-### Vec4 __mul(Vec4, Quat) {#Vec4-mul-Vec4-Quat}
-
-### Vec4 __mul(Vec4, Matrix4f) {#Vec4-mul-Vec4-Matrix4f}
+### Vec4 __mul(Vec4, Vec4i) {#Vec4-mul-Vec4-Vec4i}
 
 ### Vec4 __mul(Vec4, float) {#Vec4-mul-Vec4-float}
 
@@ -39,71 +53,49 @@ id: Vec4
 
 ### Vec4 __div(Vec4, Vec4) {#Vec4-div-Vec4-Vec4}
 
+### Vec4 __div(Vec4, Vec4i) {#Vec4-div-Vec4-Vec4i}
+
 ### Vec4 __div(Vec4, float) {#Vec4-div-Vec4-float}
 
-### Vec4 __add(Vec4, Vec4) {#Vec4-add-Vec4-Vec4}
+### Vec4 __div(float, Vec4) {#Vec4-div-float-Vec4}
 
-### Vec4 __sub(Vec4, Vec4) {#Vec4-sub-Vec4-Vec4}
-
-### Vec4 __unm(Vec4, Vec4) {#Vec4-unm-Vec4-Vec4}
+### Vec4 __unm(Vec4) {#Vec4-unm-Vec4}
 
 ### bool __eq(Vec4, Vec4) {#bool-eq-Vec4-Vec4}
 
-### float __len(Vec4, Vec4) {#float-len-Vec4-Vec4}
+### bool __eq(Vec4, Vec4i) {#bool-eq-Vec4-Vec4i}
+
+### float __len(Vec4) {#float-len-Vec4}
 
 ## List of Methods
 
-### float Sum() {#float-Sum}
-
-### float GetMul() {#float-GetMul}
-
-### float Prod() {#float-Prod}
-
-### float LinLen() {#float-LinLen}
-
 ### float Len() {#float-Len}
 
-### float SqLen() {#float-SqLen}
+### float SqrLength() {#float-SqrLength}
 
-### float MaxComponent() {#float-MaxComponent}
+### bool IsZero() {#bool-IsZero}
 
-### float MinComponent() {#float-MinComponent}
+### float GetMinComponent() {#float-GetMinComponent}
 
-### int GetMinIndex() {#int-GetMinIndex}
-
-### int GetMaxIndex() {#int-GetMaxIndex}
+### float GetMaxComponent() {#float-GetMaxComponent}
 
 ### Vec4 GetAbs() {#Vec4-GetAbs}
 
-### Vec2 V2(Vec4) {#Vec2-V2-Vec4}
+### void Clamp(Vec4, float, float) {#void-Clamp-Vec4-float-float}
 
-### Vec3 V3(Vec4) {#Vec3-V3-Vec4}
+### void Clamp(Vec4, Vec4, Vec4) {#void-Clamp-Vec4-Vec4-Vec4}
 
-### Vec2 XY() {#Vec2-XY}
+### Vec4 GetClamped(Vec4, float, float) {#Vec4-GetClamped-Vec4-float-float}
 
-### Vec2 XZ() {#Vec2-XZ}
-
-### Vec2 YZ() {#Vec2-YZ}
-
-### Vec3 YZW() {#Vec3-YZW}
-
-### Vec3 ZYX() {#Vec3-ZYX}
-
-### Vec3 ZWX() {#Vec3-ZWX}
-
-### bool IsAnyNaN() {#bool-IsAnyNaN}
-
-### Vec4 GetUnit() {#Vec4-GetUnit}
-
-### Vec4 GetUnitSafe() {#Vec4-GetUnitSafe}
-
-### Vec4 SetAbs() {#Vec4-SetAbs}
+### Vec4 GetClamped(Vec4, Vec4, Vec4) {#Vec4-GetClamped-Vec4-Vec4-Vec4}
 
 ### float Dot(Vec4, Vec4) {#float-Dot-Vec4-Vec4}
 
-### Vec4 Lerp(Vec4, Vec4, float) {#Vec4-Lerp-Vec4-Vec4-float}
+### float Dot(Vec4, Vec4i) {#float-Dot-Vec4-Vec4i}
 
-### Vec4 Mix(Vec4, Vec4, float) {#Vec4-Mix-Vec4-Vec4-float}
+### bool IsAnyNaN() {#bool-IsAnyNaN}
+
+### Vec4 Lerp(Vec4, Vec4, float) {#Vec4-Lerp-Vec4-Vec4-float}
 
 ### Vec4 Normalize() {#Vec4-Normalize}
 
@@ -112,12 +104,6 @@ id: Vec4
 ### Vec4 GetNormalized() {#Vec4-GetNormalized}
 
 ### Vec4 GetNormalizedSafe() {#Vec4-GetNormalizedSafe}
-
-### void Clamp(Vec4, float, float) {#void-Clamp-Vec4-float-float}
-
-### Vec4 GetClamped(Vec4, float, float) {#Vec4-GetClamped-Vec4-float-float}
-
-### Vec4 Signs() {#Vec4-Signs}
 
 ### void Ceil(Vec4) {#void-Ceil-Vec4}
 
@@ -131,17 +117,7 @@ id: Vec4
 
 ### Vec4 GetRounded(Vec4) {#Vec4-GetRounded-Vec4}
 
-### void SetLength(Vec4, float) {#void-SetLength-Vec4-float}
-
-### float Length(Vec4) {#float-Length-Vec4}
-
-### float Length(Vec4, Vec4) {#float-Length-Vec4-Vec4}
-
-### Vec4 IsNaN(Vec4) {#Vec4-IsNaN-Vec4}
-
-### bool IsZero(Vec4) {#bool-IsZero-Vec4}
-
-### float DistanceTo(Vec4, Vec4) {#float-DistanceTo-Vec4-Vec4}
+### float DistanceTo(Vec4) {#float-DistanceTo-Vec4}
 
 ## List of Properties
 
@@ -155,7 +131,15 @@ id: Vec4
 
 ### Vec4 zero {#Vec4-zero}
 
-### float length {#float-length}
+### Vec4 up {#Vec4-up}
 
-### Vec4 normalized {#Vec4-normalized}
+### Vec4 right {#Vec4-right}
+
+### Vec4 forward {#Vec4-forward}
+
+### Vec4 down {#Vec4-down}
+
+### Vec4 left {#Vec4-left}
+
+### Vec4 back {#Vec4-back}
 
